# browser-automation-production-kit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  compliance_question.yml  feature_request.yml  provider_benchmark.yml
.github/workflows/: benchmark.yml
benchmarks/: README.md  provider-benchmark-template.md
benchmarks/fixtures/: browser_debug_pages.json  docs_pages.json  ecommerce_pages.json  external_provider_urls.example.json  retrieval_queries.json
benchmarks/scripts/: generate_cost_per_1k_report.py  generate_ingestion_success_report.py  (+6 more)
docs/: compliance-boundaries.md  crawlee-python-track.md  docs-to-rag-chunk-schema.md  faq.md  provider-adapters.md  traffic-snapshot-template.md  workflow-lab-model.md
production/: cost-control.md  deployment.md  disclosure.md  ecommerce-price-monitor-decision.md  observability.md  provider-boundary-checklist.md  provider-comparison.md  providers.md  rag-ingestion.md
reports/: cost-assumption-worksheet.md  cost-per-1k-pages-template.md  provider-evaluation-report-template.md
tests/: test_artifact_writer.py  test_cost_per_1k_report.py  test_crawlee_docs_to_rag.py  test_external_provider_benchmark.py  test_ingestion_success_report.py  test_jobs.py  test_local_fixture_adapter.py  test_metrics_summary.py  test_production_decision_docs.py  test_provider_adapter_interface.py  test_provider_benchmark_template.py  test_provider_evaluation_report.py  test_rag_chunks.py  test_retrieval_benchmark.py
(+32 files in other folders)
