[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-automation-production-kit"
version = "0.3.1"
description = "Production patterns for browser automation: adapters, artifacts, metrics, benchmarks, and runbooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Prodkit Labs" }]
dependencies = []

[project.optional-dependencies]
crawlee = ["crawlee[beautifulsoup]>=1.6"]
browser = ["playwright>=1.56"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
